Fixing regions for admin types